objects/Posicao_Sellout__c.object
<CustomObject>
    <fields>
        <fullName>ChecklistARG_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Check List ARG</label>
        <referenceTo>CLV_ChecklistVisita_ARG__c</referenceTo>
        <relationshipLabel>Posição Sellout</relationshipLabel>
        <relationshipName>Posi_o_Sellout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_de_visita__c</fullName>
        <label>Checklist de visita</label>
        <referenceTo>Checklist_de_visita__c</referenceTo>
        <relationshipLabel>Posição Sellout</relationshipLabel>
        <relationshipName>Posi_o_Sellout</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentários</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nao_se_aplica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Produto2__c</fullName>
        <label>Produto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QT_Estoque__c</fullName>
        <label># Estoque</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QT_Sell_in__c</fullName>
        <label># Sell-in</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QT_Sell_out__c</fullName>
        <label># Sell-out</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_visita_posicao__c</fullName>
        <formula>Checklist_de_visita__r.Status_da_Visita__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status visita posicao</label>
        <type>Text</type>
    </fields>
    <label>Posição Sellout</label>
    <nameField>
        <displayFormat>SOUT-{0}</displayFormat>
        <label>Nome do Sellout</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Posição Sellout</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSO_Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSO_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>nao_altera_nada_com_o_status_da_visita</fullName>
        <active>true</active>
        <description>nao altera nada com o status da visita = encerrado</description>
        <errorConditionFormula>priorvalue(  Status_visita_posicao__c  ) = &quot;Encerrada&quot;</errorConditionFormula>
        <errorDisplayField>QT_Estoque__c</errorDisplayField>
        <errorMessage>Não é possível alterar com o status da Visita = Encerrada.</errorMessage>
    </validationRules>
</CustomObject>